1. Add responsive design code for mobile and tablet page. Successful test on iPhone 6s. Need to check iPad view. 2. Fix some bug.

--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -21,6 +21,23 @@ a{
   text-decoration: none !important;
 }
 
+.noLS{
+  display:none;
+}
+
+@media (max-device-width : 600px) and (orientation : landscape) {
+  .noLS{
+    color:#666666;
+    font-size:60px;
+    text-align: center;
+    display:block;
+  }
+
+  body{
+    display:none;
+  }
+}
+
 @font-face {
     font-family: FontAwesome;
     src: url(../fonts/FontAwesome.otf);
@@ -59,8 +76,9 @@ a{
 
 .navBar_sBar{
   float:right;
-  margin-right:40%;
-  margin-top:-3.5%;
+  position:absolute;;
+  left:45%;
+  margin-top: -2.5%;
 }
 
 
@@ -101,8 +119,9 @@ a{
 
 .navBar_text{
   float:right;
-  margin-top: -3%;
-  margin-right: 2%;
+  position: absolute;
+  right:2%;
+  margin-top: -2%;
 }
 
 .navBar_text a{
@@ -118,6 +137,65 @@ a{
   -webkit-transition: all 100ms cubic-bezier(.25,.8,.25,1);
 	-moz-transition: all 100ms ease-in-out;
 	transition: all 100ms ease-in-out;
+
+}
+@media screen and (max-width: 1440px){
+
+  .navBar_text{
+    display:none;
+  }
+
+  .navBar_sBar{
+    left: 38%;
+    margin-top: -3.5%;
+
+  }
+
+  .navBar_sBar input:focus{
+    transform: translateX(-320px);
+    width:1000px;
+  }
+}
+
+@media screen and (max-width: 1024px){
+
+  .navBar_logo{
+    width:72px;
+    opacity: 1 !important;
+  }
+
+  .navBar_logo:hover{
+    opacity: 1 !important;
+  }
+
+  .navBar_sBar{
+    left: 32%;
+    transform: scale(0.8);
+  }
+
+  .navBar_sBar input:focus{
+    transform: translateX(-200px);
+    width:600px;
+  }
+
+}
+
+
+@media screen and (max-width: 600px){
+
+  .navBar_logo>img{
+    height:48px;
+    width:48px;
+    margin-top:16px;
+  }
+
+  .navBar_sBar{
+    display:none;
+  }
+
+  .navBar_text{
+    display:none;
+  }
 
 }
 
@@ -156,9 +234,8 @@ a{
 
 .slider{
   width:100%;
-  height:983px;
+  height:800px;
   margin-top:-100px;
-  margin-right:-96px;
   position:relative;
   float:right;
   z-index:-1;
@@ -166,48 +243,29 @@ a{
 
 }
 
-
 .sInnerText{
-  margin-top:-400px;
-  margin-left:164px;
+  margin-left: 260px;
+  margin-top: 350px;
+  position: absolute;
+}
+.sInnerTextH1{
+
   position:relative;
   color:#ffffff;
   font-size:28px;
+  text-overflow: ellipsis;
 
 }
 
 .sInnerTextH3{
-  margin-left:164px;
+
   position:relative;
   color:#ffffff;
   font-size:18px;
+  text-overflow: ellipsis;
 }
 
-/*@media screen and (max-width: 1750px){
-  .sInner{
-    text-align: center;
-  }
 
-  .slider{
-    width:100%;
-    height:983px;
-    margin-top:-100px;
-    position:relative;
-    float:right;
-    z-index:-1;
-
-  }
-
-  .sInnerText{
-
-
-  }
-
-  .sInnerTextH3{
-
-  }
-
-}*/
 
 .sInnerIndicator{
   position:relative;
@@ -269,13 +327,132 @@ a{
 	transition: all 100ms ease-in-out;
 
 }
+@media screen and (min-width: 2200px){
+  .slider{
+    height:1000px;
+  }
+
+  .sInnerText{
+    margin-top:550px;
+  }
+}
+@media screen and (max-width: 1440px){
+  .slider{
+    height:600px;
+    margin-right:-96px;
+  }
+
+  .sInnerText{
+
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 10%;
+  }
+
+  .sInnerTextH3{
+    font-size:24px;
+  }
+
+  .sInnerTextH1{
+    font-size:20px;
+  }
+
+
+
+  .sliderButton{
+    margin-left: 44%;
+    margin-top: -14%;
+    transform: scale(0.9);
+  }
+
+}
+
+@media screen and (max-width: 1024px){
+  .slider{
+    height:500px;
+    margin-right: 0px;
+  }
+
+  .slider img{
+    width:120%;
+  }
+
+  .sInnerIndicator{
+    margin-left:40%;
+    margin-right:40%;
+    margin-top:-5%;
+    transform: scale(0.7);
+  }
+
+  .sInnerText{
+    text-align: center;
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top: 10%;
+  }
+
+  .sInnerTextH1{
+    font-size:18px;
+  }
+
+  .sInnerTextH3{
+    font-size:14px;
+    width: 300px;
+  }
+
+
+
+  .sliderButton{
+    margin-left: 40%;
+    margin-top: -18%;
+    transform: scale(0.7);
+  }
+
+}
+
+@media screen and (max-width: 600px){
+
+
+  .sInnerText{
+
+    text-align: center;
+    margin-left:9%;
+    margin-top: -155px;
+  }
+
+  .sInnerIndicator{
+    margin-left:28%;
+    margin-right:28%;
+    margin-top:-5%;
+    transform: scale(0.5);
+  }
+
+  .sInnerText h1{
+    font-size:18px;
+    font-weight:900;
+  }
+
+  .sInnerText a{
+    font-size:6px;
+  }
+
+  .sliderButton{
+    margin-left: 22%;
+    margin-top: -124px;
+    transform: scale(0.5);
+  }
+
+
+
+}
 
 
 /*Sidebar Start*/
 
 .sideBar{
   width:96px;
-  height:883px;
+  height:700px;
   background-color: #1e1e1e;
   position:absolute;;
 
@@ -288,7 +465,7 @@ a{
   text-align: center;
   color:#ffffff;
   font-size:14px;
-  padding-top: 70px;
+  padding-top: 45px;
 }
 
 .sideBar img{
@@ -304,6 +481,68 @@ a{
 	-moz-transition: all 100ms ease-in-out;
 	transition: all 100ms ease-in-out;
 
+}
+
+@media screen and (max-width: 2200px){
+
+  .sideBar{
+    height:700px;
+  }
+
+}
+
+@media screen and (max-width: 1440px){
+
+  .sideBar{
+    height:500px;
+  }
+
+  .sideBar li{
+    padding-top:27px;
+  }
+
+  .sideBar img{
+    width:50%;
+
+  }
+
+}
+
+@media screen and (max-width: 1024px){
+
+  .sideBar{
+    height:400px;
+    width:72px;
+  }
+
+  .sideBar li{
+    padding-top:27px;
+    font-size:10px;
+  }
+
+  .sideBar img{
+    width:40%;
+
+  }
+
+}
+
+@media screen and (max-width: 600px){
+
+  .sideBar{
+    display:none;
+  }
+
+
+  .slider{
+    height:240px;
+    margin-top: -68px;
+    float:none;
+  }
+
+  .slider img{
+    width:120%;
+  }
 }
 
 /*Footer Start*/
@@ -374,4 +613,30 @@ a{
   -webkit-transition: all 100ms cubic-bezier(.25,.8,.25,1);
 	-moz-transition: all 100ms ease-in-out;
 	transition: all 100ms ease-in-out;
+}
+
+@media screen and (max-width: 600px){
+  .footer{
+    color:#ffffff;
+    /*height:72px;*/
+    background-color:#1e1e1e;
+  }
+  .footer img{
+    width:66px;
+    margin-top: 16px;
+  }
+
+  .footer_list{
+    display:none;
+  }
+
+  .footer_socialNet{
+
+      margin-top: 40px;
+      transform: scale(0.9);
+
+  }
+
+
+
 }
